fix: low-contrast text

--- a/src/components/Feedback/Review/Review.scss
+++ b/src/components/Feedback/Review/Review.scss
@@ -42,7 +42,7 @@
         font-size: 14px;
         line-height: 17px;
 
-        color: #888a9a;
+        color: #575866;
       }
     }
   }
