--- a/src/components/Header/Content/Content.scss
+++ b/src/components/Header/Content/Content.scss
@@ -42,7 +42,7 @@
       margin-bottom: 30px;
       &__row {
         &--primary-color {
-          color: #5fb848;
+          color: #407f33;
         }
       }
     }
